# eswitch_v5

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  annotated.html  annotated.js  build.sh  build_dev.sh  classes.html  classeswitch__v5_1_1Modules.html  classeswitch__v5_1_1condition-members.html  classeswitch__v5_1_1condition.html  classeswitch__v5_1_1condition.js  classeswitch__v5_1_1condition__impl-members.html  classeswitch__v5_1_1condition__impl.html  classeswitch__v5_1_1condition__impl.js  classeswitch__v5_1_1conditions-members.html  classeswitch__v5_1_1conditions.html  classeswitch__v5_1_1conditions.js  classeswitch__v5_1_1eswitch__impl-members.html  classeswitch__v5_1_1eswitch__impl.html  classeswitch__v5_1_1eswitch__impl.js  classeswitch__v5_1_1extension_1_1Range-members.html  classeswitch__v5_1_1extension_1_1Range.html  classeswitch__v5_1_1extension_1_1Range.js  classeswitch__v5_1_1predicate__condition-members.html  classeswitch__v5_1_1predicate__condition.html  classeswitch__v5_1_1predicate__condition.js  classstatic_01constexpr_01bool.html  doxygen.css  eswitch__v5_8hpp.html  eswitch__v5_8hpp.js  eswitch__v5_8hpp_source.html  examples_8md.html  examples_8md_source.html  files.html  files.js  functions.html  functions_func.html  functions_rela.html  (+115 more)
.github/workflows/: clang_build.yml  clang_examples.yml  clang_tests.yml  cmake.yml  doxygen.yml  eswitch_v5.yml  gcc_build.yml  gcc_tests.yml  test.yml
benchmarks/: eswitch_benchmark.cpp  eswitch_benchmarks.cpp
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  customdoxygen.css  doc.md  examples.md  header.html  index.md
example/: CMakeLists.txt  any_from.cpp  default.cpp  example0.cpp  example1.cpp  example10.cpp  example11.cpp  example12.cpp  example13.cpp  example14.cpp  example15.cpp  example16.cpp  example17.cpp  example18.cpp  example19.cpp  example2.cpp  example20.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp  example7.cpp  example8.cpp  example9.cpp  implicit_break.cpp  match_in_range.cpp  match_via_regex.cpp  match_via_regex_with_match_output.cpp  multiple_arguments.cpp  stringify_enum.cpp
examples/: CMakeLists.txt  any_from.cpp  default.cpp  explicit_fallthrough.cpp  extension_float_comparison.cpp  extension_floating_point_comparison.cpp  extension_value_and_type_transferring.cpp  implicit_break.cpp  match_by_multiple_parameters.cpp  match_by_predicate_as_free_function.cpp  match_by_predicates.cpp  match_for_polymorphic_types.cpp  match_for_std_any.cpp  match_for_std_pair.cpp  match_for_std_tuple.cpp  match_for_std_variant.cpp  match_in_range.cpp  match_mixed_condition.cpp  match_via_regex.cpp  match_via_regex_with_match_output.cpp  matching_arguments_in_any_order.cpp  multiple_arguments.cpp  partial_match.cpp  stringify_enum.cpp
include/eswitch/: eswitch_v4.hpp  eswitch_v5.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_17.js  classes_18.js  classes_2.js  (+106 more)
tests/: eswitch_tests.cpp  eswitch_v4_tests.cpp
